# website

./: .gitignore  README.rst  pyproject.toml  requirements.txt
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
website/: __init__.py  auth.py  blog.py  config.py  db.py
website/api/v1/: cv.py
website/assets/css/: main.css
website/cv/: controller.py  cv.py  data.py  model.py
website/cv/templates/cv/: view.html
website/data/: __init__.py  cv.py
website/model/: __init__.py  _cv.py
website/templates/: base.html  index.html
website/templates/auth/: register.html
website/templates/blog/: create.html  index.html
